--- a/main.html
+++ b/main.html
@@ -20,7 +20,7 @@
 </div>
 <div class="header">
   <div class="headertitle">
-<h1>Riak Python Client API Documentation Documentation</h1>  </div>
+<h1>Riak Python Client API Documentation</h1>  </div>
 </div>
 <div class="contents">
 <h3 class="version">1.1.1 </h3></div>
