--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/xhtml;charset=UTF-8"/>
-<title>Riak PHP API Documenation</title>
+<title>Riak PHP Client API</title>
 </head>
 <frameset cols="250,*">
   <frame src="tree.html" name="treefrm"/>
