--- a/namespace-Basho.html
+++ b/namespace-Basho.html
@@ -197,7 +197,7 @@
 	<table class="summary table table-bordered table-striped" id="classes">
 <tr>
 	<td class="name"><a href="class-Basho.Riak.html">Riak</a></td>
-	<td>This class maintains the list of nodes in the Riak cluster. It follows the Facade Design Pattern.</td>
+	<td>This class maintains the list of nodes in the Riak cluster.</td>
 </tr>
 	</table>
 </div>
