--- a/source-class-Basho.Riak.html
+++ b/source-class-Basho.Riak.html
@@ -300,7 +300,7 @@
 </span><span id="24" class="l"><span class="php-keyword1">use</span> Basho\Riak\Node;
 </span><span id="25" class="l">
 </span><span id="26" class="l"><span class="php-comment">/**
-</span></span><span id="27" class="l"><span class="php-comment"> * This class maintains the list of nodes in the Riak cluster. It follows the Facade Design Pattern.
+</span></span><span id="27" class="l"><span class="php-comment"> * This class maintains the list of nodes in the Riak cluster.
 </span></span><span id="28" class="l"><span class="php-comment"> *
 </span></span><span id="29" class="l"><span class="php-comment"> * &lt;code&gt;
 </span></span><span id="30" class="l"><span class="php-comment"> * $nodes = (new Node\Builder)
