--- a/source-class-Basho.Riak.Command.Object.Fetch.html
+++ b/source-class-Basho.Riak.Command.Object.Fetch.html
@@ -273,7 +273,7 @@
 <div id="right">
 	<div id="rightInner">
 <div id="source">
-	<pre class="numbers"><code><span class="l"><a href="#1"> 1 </a></span><span class="l"><a href="#2"> 2 </a></span><span class="l"><a href="#3"> 3 </a></span></span><span class="l"><a href="#4"> 4 </a></span></span><span class="l"><a href="#5"> 5 </a></span></span><span class="l"><a href="#6"> 6 </a></span></span><span class="l"><a href="#7"> 7 </a></span></span><span class="l"><a href="#8"> 8 </a></span></span><span class="l"><a href="#9"> 9 </a></span></span><span class="l"><a href="#10">10 </a></span></span><span class="l"><a href="#11">11 </a></span></span><span class="l"><a href="#12">12 </a></span></span><span class="l"><a href="#13">13 </a></span></span><span class="l"><a href="#14">14 </a></span></span><span class="l"><a href="#15">15 </a></span></span><span class="l"><a href="#16">16 </a></span><span class="l"><a href="#17">17 </a></span><span class="l"><a href="#18">18 </a></span><span class="l"><a href="#19">19 </a></span><span class="l"><a href="#20">20 </a></span><span class="l"><a href="#21">21 </a></span><span class="l"><a href="#22">22 </a></span><span class="l"><a href="#23">23 </a></span></span><span class="l"><a href="#24">24 </a></span></span><span class="l"><a href="#25">25 </a></span></span><span class="l"><a href="#26">26 </a></span></span><span class="l"><a href="#27">27 </a></span><span class="l"><a href="#28">28 </a></span><span class="l"><a href="#29">29 </a></span><span class="l"><a href="#30">30 </a></span><span class="l"><a href="#31">31 </a></span><span class="l"><a href="#32">32 </a></span><span class="l"><a href="#33">33 </a></span><span class="l"><a href="#34">34 </a></span><span class="l"><a href="#35">35 </a></span><span class="l"><a href="#36">36 </a></span><span class="l"><a href="#37">37 </a></span></code></pre>
+	<pre class="numbers"><code><span class="l"><a href="#1"> 1 </a></span><span class="l"><a href="#2"> 2 </a></span><span class="l"><a href="#3"> 3 </a></span></span><span class="l"><a href="#4"> 4 </a></span></span><span class="l"><a href="#5"> 5 </a></span></span><span class="l"><a href="#6"> 6 </a></span></span><span class="l"><a href="#7"> 7 </a></span></span><span class="l"><a href="#8"> 8 </a></span></span><span class="l"><a href="#9"> 9 </a></span></span><span class="l"><a href="#10">10 </a></span></span><span class="l"><a href="#11">11 </a></span></span><span class="l"><a href="#12">12 </a></span></span><span class="l"><a href="#13">13 </a></span></span><span class="l"><a href="#14">14 </a></span></span><span class="l"><a href="#15">15 </a></span></span><span class="l"><a href="#16">16 </a></span><span class="l"><a href="#17">17 </a></span><span class="l"><a href="#18">18 </a></span><span class="l"><a href="#19">19 </a></span><span class="l"><a href="#20">20 </a></span><span class="l"><a href="#21">21 </a></span><span class="l"><a href="#22">22 </a></span><span class="l"><a href="#23">23 </a></span></span><span class="l"><a href="#24">24 </a></span></span><span class="l"><a href="#25">25 </a></span></span><span class="l"><a href="#26">26 </a></span></span><span class="l"><a href="#27">27 </a></span><span class="l"><a href="#28">28 </a></span><span class="l"><a href="#29">29 </a></span><span class="l"><a href="#30">30 </a></span><span class="l"><a href="#31">31 </a></span><span class="l"><a href="#32">32 </a></span><span class="l"><a href="#33">33 </a></span><span class="l"><a href="#34">34 </a></span><span class="l"><a href="#35">35 </a></span><span class="l"><a href="#36">36 </a></span><span class="l"><a href="#37">37 </a></span><span class="l"><a href="#38">38 </a></span><span class="l"><a href="#39">39 </a></span><span class="l"><a href="#40">40 </a></span><span class="l"><a href="#41">41 </a></span><span class="l"><a href="#42">42 </a></span><span class="l"><a href="#43">43 </a></span><span class="l"><a href="#44">44 </a></span><span class="l"><a href="#45">45 </a></span><span class="l"><a href="#46">46 </a></span><span class="l"><a href="#47">47 </a></span></code></pre>
 	<pre class="code"><code><span id="1" class="l"><span class="xlang">&lt;?php</span>
 </span><span id="2" class="l">
 </span><span id="3" class="l"><span class="php-comment">/*
@@ -303,14 +303,24 @@
 </span></span><span id="27" class="l"><span class="php-comment"> */</span>
 </span><span id="28" class="l"><span class="php-keyword1">class</span> Fetch <span class="php-keyword1">extends</span> Command\Object <span class="php-keyword1">implements</span> CommandInterface
 </span><span id="29" class="l">{
-</span><span id="30" class="l">    <span class="php-keyword1">public</span> <span class="php-keyword1">function</span> __construct(Command\Builder\FetchObject <span class="php-var">$builder</span>)
-</span><span id="31" class="l">    {
-</span><span id="32" class="l">        parent::__construct(<span class="php-var">$builder</span>);
-</span><span id="33" class="l">
-</span><span id="34" class="l">        <span class="php-var">$this</span>-&gt;bucket = <span class="php-var">$builder</span>-&gt;getBucket();
-</span><span id="35" class="l">        <span class="php-var">$this</span>-&gt;location = <span class="php-var">$builder</span>-&gt;getLocation();
-</span><span id="36" class="l">    }
-</span><span id="37" class="l">}</span></code></pre>
+</span><span id="30" class="l">    <span class="php-keyword1">protected</span> <span class="php-var">$decodeAsAssociative</span> = <span class="php-keyword1">false</span>;
+</span><span id="31" class="l">
+</span><span id="32" class="l">    <span class="php-keyword1">public</span> <span class="php-keyword1">function</span> __construct(Command\Builder\FetchObject <span class="php-var">$builder</span>)
+</span><span id="33" class="l">    {
+</span><span id="34" class="l">        parent::__construct(<span class="php-var">$builder</span>);
+</span><span id="35" class="l">
+</span><span id="36" class="l">        <span class="php-var">$this</span>-&gt;bucket = <span class="php-var">$builder</span>-&gt;getBucket();
+</span><span id="37" class="l">        <span class="php-var">$this</span>-&gt;location = <span class="php-var">$builder</span>-&gt;getLocation();
+</span><span id="38" class="l">        <span class="php-var">$this</span>-&gt;decodeAsAssociative = <span class="php-var">$builder</span>-&gt;getDecodeAsAssociative();
+</span><span id="39" class="l">    }
+</span><span id="40" class="l">
+</span><span id="41" class="l">    <span class="php-keyword1">public</span> <span class="php-keyword1">function</span> setResponse(<span class="php-var">$statusCode</span>, <span class="php-var">$responseHeaders</span> = [], <span class="php-var">$responseBody</span> = <span class="php-quote">''</span>)
+</span><span id="42" class="l">    {
+</span><span id="43" class="l">        <span class="php-var">$this</span>-&gt;response = <span class="php-keyword1">new</span> Response(<span class="php-var">$statusCode</span>, <span class="php-var">$responseHeaders</span>, <span class="php-var">$responseBody</span>, <span class="php-var">$this</span>-&gt;decodeAsAssociative);
+</span><span id="44" class="l">
+</span><span id="45" class="l">        <span class="php-keyword1">return</span> <span class="php-var">$this</span>;
+</span><span id="46" class="l">    }
+</span><span id="47" class="l">}</span></code></pre>
 </div>
 	</div>
 
